/cp 2010-01-20  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/42038
	* except.c (expand_start_catch_block): Deal correctly with
	do_begin_catch returning error_mark_node.

/testsuite
2010-01-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/42038
	* g++.dg/parse/crash55.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156094 138bc75d-0d04-0410-961f-82ee72b054a4